# Math-LIB

./: .gitignore  CMakeLists.txt  makefile
cmake/: lto.cmake  sanitizer.cmake  variables.cmake  warnings.cmake
cmake/cpp.in/: config.hpp.in
includes/: CMakeLists.txt
includes/public/include/: main_math.h
includes/public/src/: main_math.cpp
src/: CMakeLists.txt  main.cpp  main.h
